Unreleased
----------

* Updated msgpack requirement to `~=1.0`.


2.4.2 (2020-02-19)
------------------

* Fixed a bug where ``ConnectionPool.pop()`` might return an invalid
  connection.

* Added logging for a group_send over capacity failure.


2.4.1 (2019-10-23)
------------------

* Fixed compatibility with Python 3.8.


2.4.0 (2019-04-14)
------------------

* Updated ASGI and Channels dependencies for ASGI v3.


2.3.3 (2019-01-10)
------------------

* Bumped msgpack to 0.6

* Enforced Python 3.6 and up because 3.5 is too unreliable.


2.3.2 (2018-11-27)
------------------

* Fix memory leaks with receive_buffer

* Prevent double-locking problems with cancelled tasks


2.3.1 (2018-10-17)
------------------

* Fix issue with leaking of connections and instability introduced in 2.3.0


2.3.0 (2018-08-16)
------------------

* Messages to the same process (with the same prefix) are now bundled together
  in a single message for efficiency.

* Connections to Redis are now kept in a connection pool with significantly
  improved performance as a result. This change required lists to be changed
  from oldest-first to newest-first, so immediately after any upgrade,
  existing messages in Redis will be drained in reverse order until your
  expiry time (normally 60 seconds) has passed. After this, behaviour will
  be normal again.


2.2.1 (2018-05-17)
------------------

* Fixed a bug in group_send where it would not work if channel_capacity was set


2.2.0 (2018-05-13)
------------------

* The group_send method now uses Lua to massively increase the speed of sending
  to large groups.


2.1.1 (2018-03-21)
------------------

* Fixed bug where receiving messages would hang after a while or at high
  concurrency levels.

* Fixed bug where the default host values were invalid.


2.1.0 (2018-02-21)
------------------

* Internals have been reworked to remove connection pooling and sharing. All
  operations will now open a fresh Redis connection, but the backend will no